y.output
Terminals unused in grammar

   T_Dims
   T_Return
   T_Break
   T_Continue


State 155 conflicts: 19 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: FnDef
    5     | VarDeclGlobal

    6 FnDef: FnPrototype CompoundStmtNoNewScope

    7 CompoundStmtNoNewScope: T_LeftBrace T_RightBrace
    8                       | T_LeftBrace StmtList T_RightBrace

    9 CompoundStmtWithScope: T_LeftBrace T_RightBrace
   10                      | T_LeftBrace StmtList T_RightBrace

   11 StmtList: Stmt
   12         | VarDecl
   13         | StmtList Stmt
   14         | StmtList VarDecl

   15 Stmt: CompoundStmtWithScope
   16     | SimpleStmt

   17 SimpleStmt: ExprStmt
   18           | SelectionStmt
   19           | SwitchStmt
   20           | CaseLabel
   21           | IterStmt

   22 VarDeclGlobal: TypeSpecifier T_Identifier T_Semicolon

   23 VarDecl: FnPrototype T_Semicolon
   24        | TypeSpecifier T_Identifier T_Semicolon

   25 TypeSpecifier: T_Void
   26              | T_Bool
   27              | T_Float
   28              | T_Int
   29              | T_Vec2
   30              | T_Vec3
   31              | T_Vec4
   32              | T_Mat2
   33              | T_Mat3
   34              | T_Mat4

   35 FnPrototype: FnDeclarator T_RightParen

   36 FnDeclarator: FnHeader
   37             | FnHeaderWithParameters

   38 FnHeaderWithParameters: FnHeader ParameterDecl
   39                       | FnHeaderWithParameters T_Comma ParameterDecl

   40 FnHeader: TypeSpecifier T_Identifier T_LeftParen

   41 ParameterDecl: TypeSpecifier T_Identifier
   42              | TypeSpecifier

   43 ExprStmt: T_Semicolon
   44         | Expr T_Semicolon

   45 Expr: AssignExpr

   46 AssignExpr: ConditionalExpr
   47           | TypeSpecifier T_Identifier AssignOp AssignExpr
   48           | UnaryExpr AssignOp AssignExpr

   49 AssignOp: T_Equal
   50         | T_MulAssign
   51         | T_DivAssign
   52         | T_AddAssign
   53         | T_SubAssign

   54 ConditionalExpr: LogicalOrExpr

   55 LogicalOrExpr: LogicalAndExpr
   56              | LogicalOrExpr T_OrOp LogicalAndExpr

   57 LogicalAndExpr: EqualExpr
   58               | LogicalAndExpr T_AndOp EqualExpr

   59 EqualExpr: RelationalExpr
   60          | EqualExpr T_EqualOp RelationalExpr
   61          | EqualExpr T_NotEqual RelationalExpr

   62 RelationalExpr: AddExpr
   63               | RelationalExpr T_LeftAngle AddExpr
   64               | RelationalExpr T_RightAngle AddExpr
   65               | RelationalExpr T_LessEqual AddExpr
   66               | RelationalExpr T_GreaterEqual AddExpr

   67 AddExpr: MultExpr
   68        | AddExpr T_Plus MultExpr
   69        | AddExpr T_Dash MultExpr

   70 MultExpr: UnaryExpr
   71         | MultExpr T_Star UnaryExpr
   72         | MultExpr T_Slash UnaryExpr

   73 UnaryExpr: PostfixExpr
   74          | T_Inc UnaryExpr
   75          | T_Dec UnaryExpr
   76          | UnaryOp UnaryExpr

   77 UnaryOp: T_Plus
   78        | T_Dash

   79 PostfixExpr: PrimExpr
   80            | PostfixExpr T_Dot T_FieldSelection
   81            | PostfixExpr T_Inc
   82            | PostfixExpr T_Dec

   83 PrimExpr: T_Identifier
   84         | T_IntConstant
   85         | T_FloatConstant
   86         | T_BoolConstant
   87         | T_LeftParen Expr T_RightParen

   88 SelectionStmt: T_If T_LeftParen Expr T_RightParen SelectionRestStmt

   89 SelectionRestStmt: StmtWithScope T_Else StmtWithScope
   90                  | StmtWithScope

   91 StmtWithScope: CompoundStmtNoNewScope
   92              | SimpleStmt

   93 SwitchStmt: T_Switch T_LeftParen Expr T_RightParen T_LeftBrace SwitchStmtList T_RightBrace

   94 SwitchStmtList: StmtList
   95               | ";"

   96 CaseLabel: T_Case Expr T_Colon
   97          | T_Default T_Colon

   98 IterStmt: T_While T_LeftParen Condition T_RightParen StmtNoNewScope
   99         | T_For T_LeftParen ForInitStmt ForRestStmt T_RightParen StmtNoNewScope

  100 StmtNoNewScope: CompoundStmtNoNewScope
  101               | SimpleStmt

  102 Condition: Expr
  103          | TypeSpecifier T_Identifier T_Equal Initializer

  104 Initializer: AssignExpr

  105 ForInitStmt: ExprStmt
  106            | VarDecl

  107 ForRestStmt: Conditionopt T_Semicolon
  108            | Conditionopt T_Semicolon Expr

  109 Conditionopt: Condition
  110             | ";"


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 25
T_Bool (259) 26
T_Int (260) 28
T_Float (261) 27
T_LessEqual (262) 65
T_GreaterEqual (263) 66
T_Equal (264) 49 103
T_NotEqual (265) 61
T_Dims (266)
T_AndOp (267) 58
T_OrOp (268) 56
T_While (269) 98
T_For (270) 99
T_If (271) 88
T_Else (272) 89
T_Return (273)
T_Break (274)
T_Inc (275) 74 81
T_Dec (276) 75 82
T_Switch (277) 93
T_Case (278) 96
T_Default (279) 97
T_LeftParen (280) 40 87 88 93 98 99
T_RightParen (281) 35 87 88 93 98 99
T_Dot (282) 80
T_FieldSelection (283) 80
T_Vec2 (284) 29
T_Vec3 (285) 30
T_Vec4 (286) 31
T_Mat2 (287) 32
T_Mat3 (288) 33
T_Mat4 (289) 34
T_Continue (290)
T_Semicolon (291) 22 23 24 43 44 107 108
T_Colon (292) 96 97
T_Comma (293) 39
T_AddAssign (294) 52
T_MulAssign (295) 50
T_DivAssign (296) 51
T_SubAssign (297) 53
T_LeftBrace (298) 7 8 9 10 93
T_RightBrace (299) 7 8 9 10 93
T_Plus (300) 68 77
T_Dash (301) 69 78
T_Star (302) 71
T_Slash (303) 72
T_EqualOp (304) 60
T_LeftAngle (305) 63
T_RightAngle (306) 64
NO_ELSE (307)
T_Identifier (308) 22 24 40 41 47 83 103
T_IntConstant (309) 84
T_FloatConstant (310) 85
T_BoolConstant (311) 86
";" (312) 95 110


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Program (59)
    on left: 1, on right: 0
DeclList (60)
    on left: 2 3, on right: 1 2
Decl (61)
    on left: 4 5, on right: 2 3
FnDef (62)
    on left: 6, on right: 4
CompoundStmtNoNewScope (63)
    on left: 7 8, on right: 6 91 100
CompoundStmtWithScope (64)
    on left: 9 10, on right: 15
StmtList (65)
    on left: 11 12 13 14, on right: 8 10 13 14 94
Stmt (66)
    on left: 15 16, on right: 11 13
SimpleStmt (67)
    on left: 17 18 19 20 21, on right: 16 92 101
VarDeclGlobal (68)
    on left: 22, on right: 5
VarDecl (69)
    on left: 23 24, on right: 12 14 106
TypeSpecifier (70)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 22 24 40 41 42
    47 103
FnPrototype (71)
    on left: 35, on right: 6 23
FnDeclarator (72)
    on left: 36 37, on right: 35
FnHeaderWithParameters (73)
    on left: 38 39, on right: 37 39
FnHeader (74)
    on left: 40, on right: 36 38
ParameterDecl (75)
    on left: 41 42, on right: 38 39
ExprStmt (76)
    on left: 43 44, on right: 17 105
Expr (77)
    on left: 45, on right: 44 87 88 93 96 102 108
AssignExpr (78)
    on left: 46 47 48, on right: 45 47 48 104
AssignOp (79)
    on left: 49 50 51 52 53, on right: 47 48
ConditionalExpr (80)
    on left: 54, on right: 46
LogicalOrExpr (81)
    on left: 55 56, on right: 54 56
LogicalAndExpr (82)
    on left: 57 58, on right: 55 56 58
EqualExpr (83)
    on left: 59 60 61, on right: 57 58 60 61
RelationalExpr (84)
    on left: 62 63 64 65 66, on right: 59 60 61 63 64 65 66
AddExpr (85)
    on left: 67 68 69, on right: 62 63 64 65 66 68 69
MultExpr (86)
    on left: 70 71 72, on right: 67 68 69 71 72
UnaryExpr (87)
    on left: 73 74 75 76, on right: 48 70 71 72 74 75 76
UnaryOp (88)
    on left: 77 78, on right: 76
PostfixExpr (89)
    on left: 79 80 81 82, on right: 73 80 81 82
PrimExpr (90)
    on left: 83 84 85 86 87, on right: 79
SelectionStmt (91)
    on left: 88, on right: 18
SelectionRestStmt (92)
    on left: 89 90, on right: 88
StmtWithScope (93)
    on left: 91 92, on right: 89 90
SwitchStmt (94)
    on left: 93, on right: 19
SwitchStmtList (95)
    on left: 94 95, on right: 93
CaseLabel (96)
    on left: 96 97, on right: 20
IterStmt (97)
    on left: 98 99, on right: 21
StmtNoNewScope (98)
    on left: 100 101, on right: 98 99
Condition (99)
    on left: 102 103, on right: 98 109
Initializer (100)
    on left: 104, on right: 103
ForInitStmt (101)
    on left: 105 106, on right: 99
ForRestStmt (102)
    on left: 107 108, on right: 99
Conditionopt (103)
    on left: 109 110, on right: 107 108


state 0

    0 $accept: . Program $end

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    Program                 go to state 11
    DeclList                go to state 12
    Decl                    go to state 13
    FnDef                   go to state 14
    VarDeclGlobal           go to state 15
    TypeSpecifier           go to state 16
    FnPrototype             go to state 17
    FnDeclarator            go to state 18
    FnHeaderWithParameters  go to state 19
    FnHeader                go to state 20


state 1

   25 TypeSpecifier: T_Void .

    $default  reduce using rule 25 (TypeSpecifier)


state 2

   26 TypeSpecifier: T_Bool .

    $default  reduce using rule 26 (TypeSpecifier)


state 3

   28 TypeSpecifier: T_Int .

    $default  reduce using rule 28 (TypeSpecifier)


state 4

   27 TypeSpecifier: T_Float .

    $default  reduce using rule 27 (TypeSpecifier)


state 5

   29 TypeSpecifier: T_Vec2 .

    $default  reduce using rule 29 (TypeSpecifier)


state 6

   30 TypeSpecifier: T_Vec3 .

    $default  reduce using rule 30 (TypeSpecifier)


state 7

   31 TypeSpecifier: T_Vec4 .

    $default  reduce using rule 31 (TypeSpecifier)


state 8

   32 TypeSpecifier: T_Mat2 .

    $default  reduce using rule 32 (TypeSpecifier)


state 9

   33 TypeSpecifier: T_Mat3 .

    $default  reduce using rule 33 (TypeSpecifier)


state 10

   34 TypeSpecifier: T_Mat4 .

    $default  reduce using rule 34 (TypeSpecifier)


state 11

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 12

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 1 (Program)

    Decl                    go to state 22
    FnDef                   go to state 14
    VarDeclGlobal           go to state 15
    TypeSpecifier           go to state 16
    FnPrototype             go to state 17
    FnDeclarator            go to state 18
    FnHeaderWithParameters  go to state 19
    FnHeader                go to state 20


state 13

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 14

    4 Decl: FnDef .

    $default  reduce using rule 4 (Decl)


state 15

    5 Decl: VarDeclGlobal .

    $default  reduce using rule 5 (Decl)


state 16

   22 VarDeclGlobal: TypeSpecifier . T_Identifier T_Semicolon
   40 FnHeader: TypeSpecifier . T_Identifier T_LeftParen

    T_Identifier  shift, and go to state 23


state 17

    6 FnDef: FnPrototype . CompoundStmtNoNewScope

    T_LeftBrace  shift, and go to state 24

    CompoundStmtNoNewScope  go to state 25


state 18

   35 FnPrototype: FnDeclarator . T_RightParen

    T_RightParen  shift, and go to state 26


state 19

   37 FnDeclarator: FnHeaderWithParameters .
   39 FnHeaderWithParameters: FnHeaderWithParameters . T_Comma ParameterDecl

    T_Comma  shift, and go to state 27

    $default  reduce using rule 37 (FnDeclarator)


state 20

   36 FnDeclarator: FnHeader .
   38 FnHeaderWithParameters: FnHeader . ParameterDecl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 36 (FnDeclarator)

    TypeSpecifier  go to state 28
    ParameterDecl  go to state 29


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 23

   22 VarDeclGlobal: TypeSpecifier T_Identifier . T_Semicolon
   40 FnHeader: TypeSpecifier T_Identifier . T_LeftParen

    T_LeftParen  shift, and go to state 30
    T_Semicolon  shift, and go to state 31


state 24

    7 CompoundStmtNoNewScope: T_LeftBrace . T_RightBrace
    8                       | T_LeftBrace . StmtList T_RightBrace

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_While          shift, and go to state 32
    T_For            shift, and go to state 33
    T_If             shift, and go to state 34
    T_Inc            shift, and go to state 35
    T_Dec            shift, and go to state 36
    T_Switch         shift, and go to state 37
    T_Case           shift, and go to state 38
    T_Default        shift, and go to state 39
    T_LeftParen      shift, and go to state 40
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Semicolon      shift, and go to state 41
    T_LeftBrace      shift, and go to state 42
    T_RightBrace     shift, and go to state 43
    T_Plus           shift, and go to state 44
    T_Dash           shift, and go to state 45
    T_Identifier     shift, and go to state 46
    T_IntConstant    shift, and go to state 47
    T_FloatConstant  shift, and go to state 48
    T_BoolConstant   shift, and go to state 49

    CompoundStmtWithScope   go to state 50
    StmtList                go to state 51
    Stmt                    go to state 52
    SimpleStmt              go to state 53
    VarDecl                 go to state 54
    TypeSpecifier           go to state 55
    FnPrototype             go to state 56
    FnDeclarator            go to state 18
    FnHeaderWithParameters  go to state 19
    FnHeader                go to state 20
    ExprStmt                go to state 57
    Expr                    go to state 58
    AssignExpr              go to state 59
    ConditionalExpr         go to state 60
    LogicalOrExpr           go to state 61
    LogicalAndExpr          go to state 62
    EqualExpr               go to state 63
    RelationalExpr          go to state 64
    AddExpr                 go to state 65
    MultExpr                go to state 66
    UnaryExpr               go to state 67
    UnaryOp                 go to state 68
    PostfixExpr             go to state 69
    PrimExpr                go to state 70
    SelectionStmt           go to state 71
    SwitchStmt              go to state 72
    CaseLabel               go to state 73
    IterStmt                go to state 74


state 25

    6 FnDef: FnPrototype CompoundStmtNoNewScope .

    $default  reduce using rule 6 (FnDef)


state 26

   35 FnPrototype: FnDeclarator T_RightParen .

    $default  reduce using rule 35 (FnPrototype)


state 27

   39 FnHeaderWithParameters: FnHeaderWithParameters T_Comma . ParameterDecl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    TypeSpecifier  go to state 28
    ParameterDecl  go to state 75


state 28

   41 ParameterDecl: TypeSpecifier . T_Identifier
   42              | TypeSpecifier .

    T_Identifier  shift, and go to state 76

    $default  reduce using rule 42 (ParameterDecl)


state 29

   38 FnHeaderWithParameters: FnHeader ParameterDecl .

    $default  reduce using rule 38 (FnHeaderWithParameters)


state 30

   40 FnHeader: TypeSpecifier T_Identifier T_LeftParen .

    $default  reduce using rule 40 (FnHeader)


state 31

   22 VarDeclGlobal: TypeSpecifier T_Identifier T_Semicolon .

    $default  reduce using rule 22 (VarDeclGlobal)


state 32

   98 IterStmt: T_While . T_LeftParen Condition T_RightParen StmtNoNewScope

    T_LeftParen  shift, and go to state 77


state 33

   99 IterStmt: T_For . T_LeftParen ForInitStmt ForRestStmt T_RightParen StmtNoNewScope

    T_LeftParen  shift, and go to state 78


state 34

   88 SelectionStmt: T_If . T_LeftParen Expr T_RightParen SelectionRestStmt

    T_LeftParen  shift, and go to state 79


state 35

   74 UnaryExpr: T_Inc . UnaryExpr

    T_Inc            shift, and go to state 35
    T_Dec            shift, and go to state 36
    T_LeftParen      shift, and go to state 40
    T_Plus           shift, and go to state 44
    T_Dash           shift, and go to state 45
    T_Identifier     shift, and go to state 46
    T_IntConstant    shift, and go to state 47
    T_FloatConstant  shift, and go to state 48
    T_BoolConstant   shift, and go to state 49

    UnaryExpr    go to state 80
    UnaryOp      go to state 68
    PostfixExpr  go to state 69
    PrimExpr     go to state 70


state 36

   75 UnaryExpr: T_Dec . UnaryExpr
